--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,14 @@
 server.port=5000
 server.contextPath=/
 
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.open-in-view = true;
+
 #Hibernate Search
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
 spring.jpa.properties.hibernate.search.default.indexBase = ${user.dir}/var/index/default
 spring.jpa.properties.hibernate.search.lucene_version = LUCENE_CURRENT
-spring.jpa.open-in-view = true;
 
 #DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/nutrition_info?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
