--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,14 @@ server.port=5000
 server.contextPath=/
 
 #JPA
-spring.jpa.show-sql=true
-spring.jpa.open-in-view = true;
+spring.jpa.open-in-view = true
 
 #Hibernate Search
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
 spring.jpa.properties.hibernate.search.default.indexBase = ${user.dir}/var/index/default
 spring.jpa.properties.hibernate.search.lucene_version = LUCENE_CURRENT
+spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #DataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/nutrition_info?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
