--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-devtools</artifactId>
-		<version>2.1.5.RELEASE</version>
+		<version>2.1.6.RELEASE</version>
 	</dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -62,9 +62,9 @@
 		<version>5.11.1.Final</version>
 	</dependency>
     <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.15</version>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>1.4.199</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
