--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,22 @@
           <version>3.8.0</version>
         </plugin>
         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.6.0</version>
+            <executions>
+            <execution>
+                <id>create-database</id>
+                <goals>
+                    <goal>java</goal>
+                </goals>
+                <configuration>
+                    <mainClass>com.siviglia.web.nutritioninfo.util.CreateDatabase</mainClass>
+                </configuration>
+            </execution>
+        </executions>
+        </plugin>
+        <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
