--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
 					<goals>
 						<goal>yarn</goal>
 					</goals>
-					<phase>compile</phase>
+					<phase>prepare-package</phase>
 					<configuration>
 						<arguments>build</arguments>
 					</configuration>
