--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
         <artifactId>spring-boot-starter-data-jpa</artifactId>
         <version>2.1.5.RELEASE</version>
     </dependency>
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>5.4.3.Final</version>
+    </dependency>
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-entitymanager</artifactId>
@@ -65,6 +70,11 @@
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <version>1.4.199</version>
+    </dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.16</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -175,6 +185,10 @@
                 </goals>
                 <configuration>
                     <mainClass>com.siviglia.web.nutritioninfo.util.CreateDatabase</mainClass>
+                    <arguments>
+                        <argument>-Dexec.cleanupDaemonThreads=false</argument>
+                        <argument>-Xmx3G</argument>
+                    </arguments>
                 </configuration>
             </execution>
         </executions>
