--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.properties.hibernate.search.lucene_version= LUCENE_CURRENT
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #DataSource
-#spring.datasource.url=jdbc:mysql://localhost:3306/nutrition_info?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.username=nutrition_info
+spring.datasource.url=jdbc:mysql://localhost:3306/nutrition_info?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=nutrition_info
 
-spring.datasource.url=jdbc:h2:file:~/Desktop/nutrition_info
-spring.datasource.username=sa
+#spring.datasource.url=jdbc:h2:file:~/Desktop/nutrition_info
+#spring.datasource.username=sa
