--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.open-in-view = true
 #Hibernate Search
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.search.default.directory_provider= filesystem
-spring.jpa.properties.hibernate.search.default.indexBase= hibernateSearchIndex/
+spring.jpa.properties.hibernate.search.default.indexBase= ${user.dir}/index/
 spring.jpa.properties.hibernate.search.lucene_version= LUCENE_CURRENT
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
