--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,8 @@
   <groupId>com.siviglia.web.nutritioninfo</groupId>
   <artifactId>nutrition-info</artifactId>
   <version>0.9.9</version>
-  <packaging>jar</packaging>
-
+  <packaging>${packaging.type}</packaging>
   <name>nutrition-info</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.chowinfo.com</url>
 
   <parent>
@@ -24,20 +22,35 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+
+    <server.contextPath>/</server.contextPath>
+    <server.port>5000</server.port>
+    <db.url>jdbc:h2:file:~/nutrition_info</db.url>
+    <db.driver_class>org.h2.Driver</db.driver_class>
+    <db.dialect>org.hibernate.dialect.H2Dialect</db.dialect>
+    <db.user>sa</db.user>
+    <!--- <db.url>jdbc:mysql://localhost:3306/nutrition_info?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC</db.url>
+    <db.driver_class>com.mysql.jdbc.Driver</db.driver_class>
+    <db.dialect>org.hibernate.dialect.MySQL5Dialect</db.dialect>
+    <db.user>nutrition_info</db.user> -->
+
+    <db.hbm2ddl.auto>update</db.hbm2ddl.auto>
+    <db.show_sql>false</db.show_sql>
+    <hibernate.search.default.indexBase>{user.home}/index/default/</hibernate.search.default.indexBase>
+
+    <frontend.contextPath>/nutrient</frontend.contextPath>
     <frontend-src-dir>${project.basedir}/src/main/app</frontend-src-dir>
     <node.version>v12.3.1</node.version>
     <yarn.version>v1.16.0</yarn.version>
     <frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
   </properties>
-
+    
   <dependencies>
-      <!-- removed to build jar
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
     </dependency>
-    -->
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
@@ -87,86 +100,35 @@
   </dependencies>
 
   <build>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+            <includes>
+                <include>application.properties</include>
+            </includes>
+        </resource>
+        <resource>
+            <directory>src/main/java/com/siviglia/web/nutritioninfo/util/</directory>
+            <filtering>true</filtering>
+            <includes>
+                <include>hibernate.cfg.xml</include>
+            </includes>
+        </resource>
+        <resource>
+            <directory>src/main/app/</directory>
+            <filtering>true</filtering>
+            <includes>
+                <include>package.json</include>
+            </includes>
+        </resource>
+    </resources>
+
     <plugins>
 		<plugin>
-			<groupId>com.github.eirslett</groupId>
-			<artifactId>frontend-maven-plugin</artifactId>
-			<version>${frontend-maven-plugin.version}</version>
-			<configuration>
-				<nodeVersion>${node.version}</nodeVersion>
-				<yarnVersion>${yarn.version}</yarnVersion>
-				<workingDirectory>${frontend-src-dir}</workingDirectory>
-				<installDirectory>${project.build.directory}</installDirectory>
-			</configuration>
-			<executions>
-				<execution>
-					<id>install-frontend-tools</id>
-					<goals>
-						<goal>install-node-and-yarn</goal>
-					</goals>
-				</execution>
-				<execution>
-					<id>yarn-install</id>
-					<goals>
-						<goal>yarn</goal>
-					</goals>
-					<phase>generate-resources</phase>
-					<configuration>
-						<arguments>install</arguments>
-					</configuration>
-				</execution>
-<!--				<execution>
-					<id>yarn test</id>
-					<goals>
-						<goal>yarn</goal>
-					</goals>
-					<phase>test</phase>
-					<configuration>
-						<arguments>test</arguments>
-						<environmentVariables>
-							<CI>true</CI>
-						</environmentVariables>
-					</configuration>
-				</execution> -->
-				<execution>
-					<id>yarn-build</id>
-					<goals>
-						<goal>yarn</goal>
-					</goals>
-					<phase>prepare-package</phase>
-					<configuration>
-						<arguments>build</arguments>
-					</configuration>
-				</execution>
-			</executions>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
 		</plugin>
-		<plugin>
-			<artifactId>maven-resources-plugin</artifactId>
-			<version>3.0.1</version>
-			<executions>
-				<execution>
-					<id>position-react-build</id>
-					<goals>
-						<goal>copy-resources</goal>
-					</goals>
-					<phase>prepare-package</phase>
-					<configuration>
-						<outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
-						<resources>
-							<resource>
-								<directory>${frontend-src-dir}/build</directory>
-								<filtering>false</filtering>
-							</resource>
-						</resources>
-					</configuration>
-				</execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-maven-plugin</artifactId>
-		</plugin>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
@@ -174,26 +136,6 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
-        </plugin>
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.6.0</version>
-            <executions>
-            <execution>
-                <id>create-database</id>
-                <goals>
-                    <goal>java</goal>
-                </goals>
-                <configuration>
-                    <mainClass>com.siviglia.web.nutritioninfo.util.CreateDatabase</mainClass>
-                    <arguments>
-                        <argument>-Dexec.cleanupDaemonThreads=false</argument>
-                        <argument>-Xmx3G</argument>
-                    </arguments>
-                </configuration>
-            </execution>
-        </executions>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -211,7 +153,6 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.7.1</version>
@@ -220,6 +161,182 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.0.2</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-help-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+                <execution>
+                    <id>show-profiles</id>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>active-profiles</goal>
+                    </goals>
+                </execution>
+              </executions>
+            </plugin>
       </plugins>
   </build>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+             <properties>
+                <packaging.type>jar</packaging.type>
+                <server.port>5000</server.port>
+             </properties>
+        </profile>
+
+        <profile>
+            <id>production-jar</id>
+            <properties>
+                <packaging.type>jar</packaging.type>
+                <server.port>80</server.port>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>production-war</id>
+            <properties>
+                <packaging.type>war</packaging.type>
+                <hibernate.search.default.indexBase>/var/lib/tomcat8/index/default/</hibernate.search.default.indexBase>
+                <db.url>jdbc:h2:file:/home/nick/nutrition_info</db.url>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>2.1.6.RELEASE</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>build-frontend</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.eirslett</groupId>
+                        <artifactId>frontend-maven-plugin</artifactId>
+                        <version>${frontend-maven-plugin.version}</version>
+                        <configuration>
+                            <nodeVersion>${node.version}</nodeVersion>
+                            <yarnVersion>${yarn.version}</yarnVersion>
+                            <workingDirectory>${frontend-src-dir}</workingDirectory>
+                            <installDirectory>${project.build.directory}</installDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>install-frontend-tools</id>
+                                <goals>
+                                    <goal>install-node-and-yarn</goal>
+                                </goals>
+                                <phase>prepare-package</phase>
+                            </execution>
+                            <execution>
+                                <id>yarn-install</id>
+                                <goals>
+                                    <goal>yarn</goal>
+                                </goals>
+                                <phase>prepare-package</phase>
+                                <configuration>
+                                    <arguments>install</arguments>
+                                </configuration>
+                            </execution>
+                            <!--<execution>
+                                <id>yarn test</id>
+                                <goals>
+                                    <goal>yarn</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration>
+                                    <arguments>test</arguments>
+                                    <environmentVariables>
+                                        <CI>true</CI>
+                                    </environmentVariables>
+                                </configuration>
+                            </execution> -->
+                            <execution>
+                                <id>yarn-build</id>
+                                <goals>
+                                    <goal>yarn</goal>
+                                </goals>
+                                <phase>prepare-package</phase>
+                                <configuration>
+                                    <arguments>build</arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>position-react-build</id>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <phase>prepare-package</phase>
+                                <configuration>
+                                    <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${frontend-src-dir}/build</directory>
+                                            <filtering>false</filtering>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>create-database</id>
+            <properties>
+                <packaging.type>jar</packaging.type>
+                <db.hbm2ddl.auto>create</db.hbm2ddl.auto>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.6.0</version>
+                        <executions>
+                            <execution>
+                                <id>create-database</id>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>com.siviglia.web.nutritioninfo.util.CreateDatabase</mainClass>
+                                    <arguments>
+                                        <argument>-Dexec.cleanupDaemonThreads=false</argument>
+                                        <argument>-Xmx3G</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
+
 </project>
