--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,18 @@
 
 #Server
-server.port=80
-server.contextPath=/
+server.port= @server.port@
+server.contextPath= @server.contextPath@
 
 #JPA
 spring.jpa.open-in-view = true
 
 #Hibernate Search
-spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.search.default.directory_provider= filesystem
-spring.jpa.properties.hibernate.search.default.indexBase= ${user.dir}/index/
+spring.jpa.properties.hibernate.search.default.indexBase= @hibernate.search.default.indexBase@
 spring.jpa.properties.hibernate.search.lucene_version= LUCENE_CURRENT
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #DataSource
-#spring.datasource.url=jdbc:mysql://localhost:3306/nutrition_info?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.username=nutrition_info
-
-spring.datasource.url=jdbc:h2:file:~/nutrition_info
-spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto= @db.hbm2ddl.auto@
+spring.datasource.url= @db.url@
+spring.datasource.username= @db.user@
