--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,17 @@
         <version>1.4.199</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
     </dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<version>2.1.5.RELEASE</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
 
   <build>
