Upgraded hibernate search to 6.0 Beta 1 and Spring-boot to 2.1.8 . Created new ProductsDTO to consolidate the search resulls and total results int into one call.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,11 @@ server.contextPath= @server.contextPath@
 spring.jpa.open-in-view = true
 
 #Hibernate Search
-spring.jpa.properties.hibernate.search.default.directory_provider= filesystem
-spring.jpa.properties.hibernate.search.default.indexBase= @hibernate.search.default.indexBase@
-spring.jpa.properties.hibernate.search.lucene_version= LUCENE_CURRENT
+spring.jpa.properties.hibernate.search.backends.myBackend.type= lucene
+spring.jpa.properties.hibernate.search.backends.myBackend.lucene_version= LATEST
+spring.jpa.properties.hibernate.search.default_backend= myBackend
+#spring.jpa.properties.hibernate.search.backends.myBackend.directory.root= <path to location>
+spring.jpa.properties.hibernate.search.backends.myBackend.analysis.configurer= com.siviglia.web.nutritioninfo.model.ProductsLuceneAnalysisConfigurer
 spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #DataSource
